--- a/src/test/project/pom.xml
+++ b/src/test/project/pom.xml
@@ -18,8 +18,8 @@
   <artifactId>vegardit-maven-parent.test</artifactId>
 
   <properties>
-    <java.version.unit-tests>21</java.version.unit-tests>
-    <maven.surefire.args>-Djava.version.unit-tests=${java.version.unit-tests}</maven.surefire.args>
+    <jdk.version.unit-tests>21</jdk.version.unit-tests>
+    <maven.surefire.args>-Djdk.version.unit-tests=${jdk.version.unit-tests}</maven.surefire.args>
     <maven.deploy.skip>true</maven.deploy.skip>
     <central-publishing-maven-plugin.excludedArtifacts>${project.artifactId}</central-publishing-maven-plugin.excludedArtifacts>
   </properties>
